24/02/27 - Iniciado. Adicionado primeiras paginas e alguns pseudocódigos.
24/02/28 - Adicionado pagina de marcação e pequenas correções. Pseudocódigos.
24/03/02 - Inicio da base de dados e formulário de login.
24/03/03 - Sistema de login que não funciona.
24/03/06 - Sistema de login funcional e inicio de sistema de registro.
24/03/07 - Sistema de registro funcional. Nenhum deles tem criptografia de senha.
24/03/13 - Pagina de marcar consultas filtra pacientes. Caminhos para minha página de cada usuário. Minha página de administrador inicial. Formulário para cadastro de administradores e médicos sem sistema.
24/03/14 - Sistema de registrar médicos e administradores. Mudanças no banco de dados. Erros corrigidos ou suprimidos. Senhas requiridas em cadastros. Medidas de segurança de acesso em todas as paginas que necessitam no momento.
24/03/15 - Mudanças no banco de dados e tentativa de deixar mais utilizavel realmente. Pode ser que o melhor seja abandonar essa idéia e manter apenas com email e senha por hora.
24/03/16 - Reversões no banco de dados. Uso de funções para facilitar o desenvolvimento. Modo escuro (lembrete de não mexer com css até estar tudo pronto). Alterações e pequenas correções. Todas as paginas atuais usam funções em códigos compartilhados.